@@ -2,6 +2,7 @@ from ZPublisher.Iterators import IStreamIterator
 from Products.Reflecto.content.reflector import Reflector
 from Products.Reflecto.tests.utils import samplesPath
 from Products.Reflecto.tests.zopecase import ReflectoZopeTestCase
+from Products.Reflecto.browser.download import FileDownloadView
 from Products.Reflecto.browser.download import DirectoryDownloadView
 from Testing.ZopeTestCase import ZopeTestCase
 import unittest
@@ -61,9 +62,21 @@ class DirectoryDownloadTests(ReflectoZopeTestCase):
         self.assertEqual(response.getHeader("Content-Length"), str(len(result)))
 
 
+class DownloadTests(ReflectoZopeTestCase):
+    def afterSetUp(self):
+        ReflectoZopeTestCase.afterSetUp(self)
+        self.folder.reflector=Reflector('reflector')
+        self.reflector=self.folder.reflector
+        self.reflector.setRelativePath(samplesPath)
+
+    def testContenttype(self):
+        jpeg=self.reflector["reflecto.jpg"]
+        view=FileDownloadView(jpeg, self.app.REQUEST)
+        result=view()
+        response=self.app.REQUEST.response
+        self.assertEqual(response.getHeader("Content-Type"), "image/jpeg")
+
 
 def test_suite():
-    suite = unittest.TestSuite()
-    suite.addTest(unittest.makeSuite(DirectoryDownloadTests))
-    return suite
+    return unittest.defaultTestLoader.loadTestsFromName(__name__)
 
